k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: my-app
  name: my-app
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 3000
  sessionAffinity: None
  type: ClusterIP
